Update projeto de analise de series temporais.ipynb

--- a/projeto de analise de series temporais.ipynb
+++ b/projeto de analise de series temporais.ipynb
@@ -67,7 +67,7 @@
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "\n",
     "# 1. Criando uma base de dados fictícia (exemplo: vendas mensais)\n",
-    "dates = pd.date_range(start='2020-01-01', periods=48, freq='M')\n",
+    "dates = pd.date_range(start='2020-01-01', periods=48, freq='ME')\n",
     "vendas = np.random.randint(100, 500, size=48) + np.linspace(0, 100, 48)  # Tendência crescente\n",
     "\n",
     "df = pd.DataFrame({'Data': dates, 'Vendas': vendas})\n",
